# support-ticket-triage-assistant

./: README.md  pyproject.toml
.github/workflows/: tests.yml
data/eval/: triage_cases.json  triage_holdout_cases.json
docs/: evaluation-plan.md  hybrid-triage-design.md  project-scope.md  triage-taxonomy.md
reports/: llm_smoke_eval.md  rules_baseline_eval.md  rules_baseline_eval_after_tuning.md  rules_holdout_eval.md  rules_llm_hybrid_eval.md  rules_vs_llm_eval.md
scripts/: run_triage_eval.py
src/support_triage/: __init__.py  evaluation.py  hybrid.py  llm.py  main.py  models.py  rules.py
tests/: test_eval_cli.py  test_eval_dataset.py  test_evaluation.py  test_health.py  test_hybrid.py  test_llm.py  test_models.py  test_rules.py  test_triage_endpoint.py
