[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ticket-triage-assistant"
version = "0.1.0"
description = "Backend foundation for an AI support ticket triage assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "openai",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
